[package]
name = "roadrunner-server"
version = "0.1.0"
authors = ["Alexandre Frigon <alexandre.frigon.1@gmail.com>"]
edition = "2018"


[dependencies]
gflags = "0.3.3"
uuid = { version = "0.8", features = ["v4"] }
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
core = { path = "../core" }
math = { path = "../math" }
